# automat

./: .gitignore  CMakeLists.txt
docs/: EntryPoint.graphml  api.adoc  build.bash  index.adoc  klassen_diagramm.graphml
src/: automat.c  automat.h  main.c
